--- a/src/pages/post-comments/post-comments.html
+++ b/src/pages/post-comments/post-comments.html
@@ -13,6 +13,48 @@
 </ion-header>
 
 
+
 <ion-content padding>
+
+  <ion-list>
+  <ion-list-header>
+    Comments
+  </ion-list-header>
+
+    <ion-item>
+
+            <span style="font-weight: bold;">sirjuan </span> marokkolainen lammaspata suoraan uunista otettuna kolmen tunnin haudutuksen jälkeen. Alkaishan tuo jo nälkä
+ollakin. ;-) #käteväemäntä #vaimomatskuu
+
+    </ion-item>
+  <ion-item  style="font-size: 0.8em">
+
+    <span style="font-weight: bold">sirjuan</span> I have posted this comment.
+     <ion-icon item-right name="heart-outline"></ion-icon>
+  <br>
+  <div color="grey">
+  <span>14h</span> 
+  <span color="grey" style="padding-left: 10px; font-weight: bold">Reply</span>
+  </div>
+             <ion-avatar item-left>
+      <img src="assets/images/profile.jpg">
+    </ion-avatar>
+  </ion-item>
+
+    <ion-item  style="font-size: 0.8em">
+
+    <span style="font-weight: bold">sirjuan</span> I have posted this comment.
+     <ion-icon item-right name="heart-outline"></ion-icon>
+  <br>
+  <div color="grey">
+  <span>14h</span> 
+  <span color="grey" style="padding-left: 10px; font-weight: bold">Reply</span>
+  </div>
+             <ion-avatar item-left>
+      <img src="assets/images/profile.jpg">
+    </ion-avatar>
+  </ion-item>
+
+</ion-list>
 
 </ion-content>
