--- a/src/pages/new-post/new-post.html
+++ b/src/pages/new-post/new-post.html
@@ -1,18 +1,53 @@
-<!--
-  Generated template for the NewPost page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>newPost</ion-title>
+    <ion-buttons end>
+            <button ion-button icon-only (click)="close()"><ion-icon name="close"></ion-icon></button>
+        </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+    <ion-list>
+ 
+ 
+      <ion-item>
+        <ion-avatar item-left>
+          <img [src]="base64Image" *ngIf="base64Image" /></ion-avatar>
+          <ion-textarea style="font-size: 0.8em;" type="text" [(ngModel)]="caption" placeholder="Write a caption..." value="">
 
+
+
+      </ion-textarea>
+        <ion-label floating>Caption</ion-label>
+        <ion-input type="text" ></ion-input>
+      </ion-item>
+ 
+    </ion-list>
+ 
+    <button full ion-button color="secondary" (click)="savePost()">Save</button> 
+
+    
+
+      <ion-card padding>
+
+    <ion-icon name="people" item-left padding></ion-icon>
+    Tag people
+
+  </ion-card>
+
+  <ion-card padding>
+
+    <ion-icon name="locate" item-left padding></ion-icon>
+    Add location
+    <hr>
+    <ion-badge style="font-weight: normal" color="grey">Ylläs</ion-badge>
+    <ion-badge style="font-weight: normal" color="grey">Äkäslompolo, Lapland</ion-badge>
+    <ion-badge style="font-weight: normal" color="grey">Kolari, Finland</ion-badge>
+
+  </ion-card>
+ 
 </ion-content>
