--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,8 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Search" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Feed" tabIcon="information-circle"></ion-tab>
   
   <ion-tab [root]="tab3Root" tabTitle="Login" tabIcon="log-in"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Feed" tabIcon="log-in"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Feed" tabIcon="log-in"></ion-tab>
 </ion-tabs>
