--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Search" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Feed" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Feed" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Search" tabIcon="search"></ion-tab>
   
-  <ion-tab [root]="tab3Root" tabTitle="Login" tabIcon="log-in"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Feed" tabIcon="log-in"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Feed" tabIcon="log-in"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="New Post" tabIcon="add-circle"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  
 </ion-tabs>
