--- a/src/pages/post-comments/post-comments.html
+++ b/src/pages/post-comments/post-comments.html
@@ -7,26 +7,40 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>postComments</ion-title>
+    <ion-title>Comments</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 
-<ion-content padding>
+<ion-content>
 
   <ion-list>
-  <ion-list-header>
-    Comments
-  </ion-list-header>
 
-    <ion-item>
+    <ion-item text-wrap>
 
             <span style="font-weight: bold;">sirjuan </span> marokkolainen lammaspata suoraan uunista otettuna kolmen tunnin haudutuksen jälkeen. Alkaishan tuo jo nälkä
-ollakin. ;-) #käteväemäntä #vaimomatskuu
+ollakin. ;-) #käteväemäntä #vaimomatskuu<ion-avatar item-left>
+      <img src="assets/images/profile.jpg">
+    </ion-avatar>
 
     </ion-item>
+
+      <ion-item  style="font-size: 0.8em" *ngFor="let comment of comments">
+
+    <span style="font-weight: bold">{{comment.user}}</span> {{comment.comment}}
+     <ion-icon item-right name="heart-outline"></ion-icon>
+  <br>
+  <div color="grey">
+  <span>14h</span> 
+  <span color="grey" style="padding-left: 10px; font-weight: bold">Reply</span>
+  </div>
+             <ion-avatar item-left>
+      <img src="assets/images/profile.jpg">
+    </ion-avatar>
+  </ion-item>
+
   <ion-item  style="font-size: 0.8em">
 
     <span style="font-weight: bold">sirjuan</span> I have posted this comment.
@@ -55,6 +69,15 @@ ollakin. ;-) #käteväemäntä #vaimomatskuu
     </ion-avatar>
   </ion-item>
 
+
 </ion-list>
 
+
 </ion-content>
+<ion-footer>
+
+  <ion-item no-lines>
+    <ion-input placeholder="Write a comment..."></ion-input>
+    <button ion-button item-right clear>POST</button>
+    </ion-item>
+</ion-footer>
