muutettu rest apia

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -22,8 +22,10 @@
 
 <ion-content>
 <button ion-button block outline (click)="loadPosts()">Update feed</button>
+<ion-list>
 
 <page-feed-content [posts]="posts"></page-feed-content>
 
+</ion-list>
 
 </ion-content>
