ready for phase one

--- a/src/pages/grid-content/grid-content.html
+++ b/src/pages/grid-content/grid-content.html
@@ -2,7 +2,7 @@
   <ion-row wrap>
 
     <ion-col *ngFor="let post of posts" width-33 no-padding>
-      <img [src]="post.image" (click)="loadPost(post)" />
+      <img [src]="post.imageUrl" (click)="loadPost(post)" />
     </ion-col>
 
 
