--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -9,7 +9,7 @@
 
   <ion-navbar>
     
-    <ion-searchbar clearInput (click)="openSearch()"></ion-searchbar>
+    <ion-searchbar autofocus clearInput (click)="openSearch()"></ion-searchbar>
   </ion-navbar>
 
 </ion-header>
