--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,14 +1,29 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Login
-    </ion-title>
+<ion-header class="header-no-padding" no-padding no-border>
+  <ion-navbar color="primary">
+<img no-margin src="assets/images/willegram.jpg">
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
-  <div *ngIf="showLogin">
+  <div padding *ngIf="showLogin">
+    <ion-item>
+      <ion-input padding-top type="email" placeholder="Email" [(ngModel)]="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input  type="password" placeholder="Password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+
+    <button ion-button margin-top color="primary" full (click)="doLogin()">Login</button>
+  </div>
+
+  <div padding *ngIf="!showLogin">
+
+    <ion-item>
+      <ion-input padding-top type="text" placeholder="Name" [(ngModel)]="name"></ion-input>
+    </ion-item>
+
     <ion-item>
       <ion-input type="email" placeholder="Email" [(ngModel)]="email"></ion-input>
     </ion-item>
@@ -16,24 +31,19 @@
     <ion-item>
       <ion-input type="password" placeholder="Password" [(ngModel)]="password"></ion-input>
     </ion-item>
+
+    <button ion-button margin-top color="primary" full (click)="doRegister()">Register</button>
   </div>
 
-  <div *ngIf="!showLogin">
-
-    <ion-item>
-      <ion-input type="text" placeholder="Name" [(ngModel)]="name"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-input type="email" placeholder="Email" [(ngModel)]="email"></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-input type="password" placeholder="Password" [(ngModel)]="password"></ion-input>
-    </ion-item>
-  </div>
-
-  <button ion-button color="primary" full (click)="doLogin()">Login</button>
-  <button ion-button color="primary" full (click)="doRegister()">Register</button>
+  
+   
+  
 
 </ion-content>
+
+<ion-footer>
+  <ion-item text-center no-lines (click)="registerForm()">
+  <span>Don't have an account? </span><span color="primary">Sign up</span> 
+
+  </ion-item>
+</ion-footer>
