--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,7 +21,7 @@
   <div padding *ngIf="!showLogin">
 
     <ion-item>
-      <ion-input padding-top type="text" placeholder="Name" [(ngModel)]="name"></ion-input>
+      <ion-input padding-top type="text" placeholder="Username" [(ngModel)]="name"></ion-input>
     </ion-item>
 
     <ion-item>
