--- a/src/pages/feed-content/feed-content.html
+++ b/src/pages/feed-content/feed-content.html
@@ -1,4 +1,5 @@
 
+     <button ion-button (click)="getCurrentUser()">Current</button>
      <div no-padding *ngFor="let post of posts; let index = index">
      
         
