--- a/src/pages/camera2/camera.html
+++ b/src/pages/camera2/camera.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>camera</ion-title>
+    <ion-title>Publish {{currentUserName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
