--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -11,7 +11,7 @@
 
     
     
-  <ion-title>sirjuan</ion-title>
+  <ion-title>{{currentUserName}}</ion-title>
 
   <ion-buttons end>
 <button ion-button clear large item-right (click)="buttonClick()"><ion-icon item-end large name="settings"></ion-icon></button>
