--- a/src/pages/show-post/show-post.html
+++ b/src/pages/show-post/show-post.html
@@ -10,7 +10,7 @@
   
    
 
-      <ion-title text-center>Willegram</ion-title>
+      <ion-title text-center>Willegram {{currentUserName}}</ion-title>
        <ion-buttons end>
             <button ion-button icon-only (click)="logout()" clear large item-right><ion-icon item-left name="camera"></ion-icon></button>
        </ion-buttons>
