--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
   
-         <ion-title text-center>Willegram</ion-title>
+         <ion-title text-center>Willegram {{currentUserName}}</ion-title>
        <ion-buttons end>
             <button ion-button icon-only (click)="logout()" clear large item-right><ion-icon item-left name="camera"></ion-icon></button>
        </ion-buttons>
