--- a/src/pages/post-comments/post-comments.html
+++ b/src/pages/post-comments/post-comments.html
@@ -1,13 +1,8 @@
-<!--
-  Generated template for the PostComments page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Comments</ion-title>
+    <ion-title>Comments {{currentUserName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
