--- a/src/pages/feed-content/feed-content.html
+++ b/src/pages/feed-content/feed-content.html
@@ -6,7 +6,7 @@
         
         <ion-item padding-left >
           <ion-avatar item-left>
-            <img [src]="profilePictureUrl">
+            <img [src]="post.userProfilePictureUrl">
           </ion-avatar>
           <h2 color="grey">{{post.userName}}</h2>
           <ion-icon item-right name="menu"></ion-icon>
