--- a/src/pages/camera2/camera.html
+++ b/src/pages/camera2/camera.html
@@ -1,13 +1,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Publish {{currentUserName}}</ion-title>
+    <ion-title *ngIf="user" >Publish {{currentUser.userName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content>
   {{newTime}}
+  <button ion-button (click)="userService.setCurrentUser('sirjuha@taanappitoimii.com');">Set</button>
+   <button ion-button (click)="share();">Get</button>
+   {{serviceData}}
  <button padding ion-button large outline block (click)="getNewTime()">Get time</button>
   <button padding ion-button large outline block (click)="takePicture()">Open Camera</button>
   <button padding ion-button large outline block (click)="selectFromGallery()">Select from gallery</button>
