--- a/src/pages/show-post/show-post.html
+++ b/src/pages/show-post/show-post.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the Feed page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
   
    
 
-      <ion-title text-center>Willegram {{currentUserName}}</ion-title>
+      <ion-title text-center>Willegram</ion-title>
        <ion-buttons end>
-            <button ion-button icon-only (click)="logout()" clear large item-right><ion-icon item-left name="camera"></ion-icon></button>
+            <button ion-button icon-only clear large item-right><ion-icon item-left name="camera"></ion-icon></button>
        </ion-buttons>
 
   </ion-navbar>
@@ -25,13 +19,13 @@
       <ion-item no-lines>
         
         <ion-item no-lines><ion-avatar item-left>
-          <img [src]="profilePictureUrl">
+          <img [src]="post.profilePictureUrl">
         </ion-avatar>
-        <h2 color="grey">{{userName}}</h2>
+        <h2 color="grey">{{post.userName}}</h2>
         <ion-icon item-right name="menu"></ion-icon>
         </ion-item>
                 
-          <img [src]="post.image" />
+          <img [src]="post.imageUrl" />
 
 
       <ion-item no-lines>
@@ -47,11 +41,11 @@
       </ion-item>
 <hr>
 
-      <ion-icon small name="heart"> </ion-icon> {{likeCount}} likes
+      <ion-icon small name="heart"> </ion-icon> {{post.likes.length}} likes
 
-      <span style="font-weight: bold;">{{userName}} </span> {{post.caption}}
-      <p color="grey" style="padding: 0px; font-size: 0.8em">View all {{commentsCount}} comments</p>
-      <p text-uppercase color="grey" style="padding: 0px; font-size: 0.8em">{{postTime}} ago</p>
+      <span style="font-weight: bold;">{{post.userName}} </span> {{post.caption}}
+      <p color="grey" style="padding: 0px; font-size: 0.8em">View all {{post.comments.length}} comments</p>
+      <p text-uppercase color="grey" style="padding: 0px; font-size: 0.8em">{{post.postTime}} ago</p>
 
       </ion-item>
 </ion-list>
