--- a/src/pages/post-comments/post-comments.html
+++ b/src/pages/post-comments/post-comments.html
@@ -30,7 +30,7 @@
   <span color="grey" style="padding-left: 10px; font-weight: bold">Reply</span>
 </div>
 <ion-avatar item-left>
-  <img src="comment.userProfilePictureUrl">
+  <img [src]="comment.userProfilePictureUrl">
 </ion-avatar>
 </ion-item>
 
