--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -2,7 +2,7 @@
 
   <ion-navbar>
     
-    <ion-title>{{currentUser.userName}}</ion-title>
+    <ion-title *ngIf="currentUser">{{currentUser.userName}}</ion-title>
 
     <ion-buttons end>
         <button ion-button clear large item-right (click)="buttonClick()"><ion-icon item-end large name="settings"></ion-icon></button>
@@ -13,32 +13,33 @@
 </ion-header>
 
 <ion-content no-padding>
-  <ion-item padding no-lines>
+  <ion-item no-padding no-lines>
 
 
 
     <ion-grid>
       <ion-row *ngIf="currentUser">
-        <ion-col text-center width-33 *ngIf="posts"><p style="font-weight: bold">{{posts.length}}</p>
+        <ion-col text-center width-33 *ngIf="posts">
+          <p style="font-weight: bold">{{posts.length}}</p>
           <p style="font-size: 0.7em" >posts</p>
-</ion-col>
-<ion-col text-center width-33><p style="font-weight: bold">{{currentUser.followers.length}}</p>
-  <p style="font-size: 0.7em" >followers</p>
-</ion-col>
-<ion-col text-center width-33><p style="font-weight: bold">{{currentUser.follows.length}}</p>
-  <p style="font-size: 0.7em" >following</p>
-</ion-col>
-</ion-row>
-<ion-row>
-  <button ion-button color="grey" outline block>Edit Profile</button>
-</ion-row>
-</ion-grid>
+        </ion-col>
+        <ion-col text-center width-33><p style="font-weight: bold">{{currentUser.followers.length}}</p>
+          <p style="font-size: 0.7em" >followers</p>
+        </ion-col>
+        <ion-col text-center width-33><p style="font-weight: bold">{{currentUser.follows.length}}</p>
+          <p style="font-size: 0.7em" >following</p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <button ion-button color="grey" outline block (click)="changePicture()" >Edit Profile</button>
+      </ion-row>
+    </ion-grid>
 
-    <ion-thumbnail item-left round>
-     <img *ngIf="currentUser" [src]="currentUser.profilePictureUrl"> 
+    <ion-thumbnail padding-left item-left>
+      <img *ngIf="currentUser" [src]="currentUser.profilePictureUrl"> 
     </ion-thumbnail>
-</ion-item>
-<hr>
+  </ion-item>
+  <hr>
 
 <div padding>
   <ion-segment [(ngModel)]="view">
@@ -56,7 +57,7 @@
 
 
 
-<ion-item no-lines text-center>
+
 
   <div [ngSwitch]="view">
     <ion-list *ngSwitchCase="'feed'">
@@ -65,17 +66,17 @@
  
 
 
-    <ion-list *ngSwitchCase="'grid'">
+    <ion-grid no-padding *ngSwitchCase="'grid'">
       <page-grid-content [posts]="posts"></page-grid-content>
-    </ion-list>
+    </ion-grid>
  
 
 
-    <ion-list *ngSwitchDefault>
+    <ion-list no-padding *ngSwitchDefault>
       <page-grid-content [posts]="posts"></page-grid-content>
     </ion-list>
   </div>
 
-</ion-item>
+</ion-content>
 
 
