--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -3,7 +3,7 @@
 
   <ion-navbar>
   
-         <ion-title text-center>Willegram {{currentUserName}}</ion-title>
+         <ion-title text-center>Willegram {{newCurrentUserName}}</ion-title>
        <ion-buttons end>
             <button ion-button icon-only (click)="logout()" clear large item-right><ion-icon item-left name="camera"></ion-icon></button>
        </ion-buttons>
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content *ngIf="posts && posts.length > 0">
 
      <div no-padding *ngFor="let post of posts; let index = index">
           
