--- a/src/pages/camera2/camera.html
+++ b/src/pages/camera2/camera.html
@@ -18,13 +18,13 @@
       <img [src]="base64Image" *ngIf="base64Image"/>
     </ion-thumbnail>
     
-    <ion-textarea *ngIf="base64Image"  #newPost style="font-size: 0.8em;" type="text" placeholder="Write a caption..." value=""> </ion-textarea>
+    <ion-textarea  #newPost style="font-size: 0.8em;" type="text" placeholder="Write a caption..." value=""> </ion-textarea>
    
   </ion-item>
 
-  <ion-textarea *ngIf="base64Image" #newTags style="font-size: 0.8em;" type="text" placeholder="Tag post, separate tags with space" value=""> </ion-textarea>
+  <ion-textarea  #newTags style="font-size: 0.8em;" type="text" placeholder="Tag post, separate tags with space" value=""> </ion-textarea>
   
-  <button *ngIf="base64Image" ion-button block outline (click)="addPost(newPost.value, newTags.value); newPost.value=''; newTags.value=''">Post</button>
+  <button ion-button block outline (click)="addPost(newPost.value, newTags.value); newPost.value=''; newTags.value=''">Post</button>
 
   
 </ion-content>
