Ready for phase 2
Instagram like UI

The UI design is copied from the Instagram mobile application. The UI
has similar look and feel. I have implement a tabbed system, which
presents home feed from users you are following, search view with grid
display of search results, post creation view and user profile
management view.

Publish post

Public post publish, which allows you to publish posts to your followers
and to public based on tags. Each post is made of post image, post
description + possible tags. Post images can be chosen from the phone
gallery or captured with camera.

Post like

You can like posts from different users. Likes are displayed below the
post. When post likes is less than 10 then list of liking usernames are
displayed.

Post commenting

Posts can be commented by users and comments are displayed below the
post. Commented user name is displayed also.

Search

Users and tags can be searched. Search results are displayed in a grid
view, where there are three results in a row and each result is a small
version of the post image. Clicking an image will bring up a detailed
view of the post.

User profile view
Displays the basic information of the user. Allows user to change his
profile image. Displays all his posts in the same way as the search view
displays search results. Displays the numbers of his followers and the
amount of users followed.

User login

User can login to the application with his username and password

User sign in

A new user can be created with a username / password combination to
authenticate

--- a/src/pages/camera2/camera.html
+++ b/src/pages/camera2/camera.html
@@ -6,25 +6,37 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content no-padding>
 
-  <button padding ion-button large outline block (click)="takePicture()">Open Camera</button>
+  <ion-item text-center no-padding>
+    <ion-grid no-padding>
+      <ion-row>
+        <ion-col width-50 (click)="takePicture()">
+          <ion-icon *ngIf="!base64Image" class="icons" name="camera"></ion-icon>
+          <ion-icon *ngIf="base64Image" class="smaller-icons" name="camera"></ion-icon>
+        </ion-col>
+        <ion-col width-50 (click)="selectFromGallery()">
+          <ion-icon *ngIf="!base64Image" class="icons" name="photos"></ion-icon>
+          <ion-icon *ngIf="base64Image" class="smaller-icons" name="camera"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
 
-  <button padding ion-button large outline block (click)="selectFromGallery()">Select from gallery</button>
-     
-  <ion-item no-lines>
+  <ion-item padding-right>
 
-    <ion-thumbnail item-left>
-      <img [src]="base64Image" *ngIf="base64Image"/>
+    <ion-thumbnail *ngIf="base64Image" item-left>
+      <img [src]="base64Image"/>
     </ion-thumbnail>
     
     <ion-textarea  #newPost style="font-size: 0.8em;" type="text" placeholder="Write a caption..." value=""> </ion-textarea>
    
+   
   </ion-item>
-
-  <ion-textarea  #newTags style="font-size: 0.8em;" type="text" placeholder="Tag post, separate tags with space" value=""> </ion-textarea>
+  <ion-item padding-right>
+  <ion-input  #newTags style="font-size: 0.8em;" type="text" placeholder="Tag post, separate tags with space" value=""> </ion-input>
+   <button ion-button item-right large clear (click)="addPost(newPost.value, newTags.value); newPost.value=''; newTags.value=''"><ion-icon color="" name="send"></ion-icon></button>
+  </ion-item>
   
-  <button ion-button block outline (click)="addPost(newPost.value, newTags.value); newPost.value=''; newTags.value=''">Post</button>
-
   
 </ion-content>
