--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
 
 <ion-content no-padding>
 
-  <img src="../assets/images/willegram.jpg" />
+  <img src="assets/images/willegram.jpg" />
   
   <div padding *ngIf="showLogin">
     <ion-item><ion-input padding-top type="email" placeholder="Email" [(ngModel)]="email"></ion-input></ion-item>
