--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -7,8 +7,25 @@
 </ion-header>
 
 <ion-content>
-  <button padding ion-button large outline block (click)="takePicture()">Open Camera</button>
-  <button padding ion-button large outline block (click)="selectFromGallery()">Select from gallery</button>
+
+  <ion-item text-center no-padding>
+ Change profile picture
+  </ion-item>
+  <ion-item text-center no-padding>
+   
+    <ion-grid no-padding>
+      <ion-row>
+        <ion-col width-50 (click)="takePicture()">
+          <ion-icon *ngIf="!base64Image" class="icons" name="camera"></ion-icon>
+          <ion-icon *ngIf="base64Image" class="smaller-icons" name="camera"></ion-icon>
+        </ion-col>
+        <ion-col width-50 (click)="selectFromGallery()">
+          <ion-icon *ngIf="!base64Image" class="icons" name="photos"></ion-icon>
+          <ion-icon *ngIf="base64Image" class="smaller-icons" name="camera"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
      
       <img [src]="base64Image" *ngIf="base64Image"/>
   
